--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	
-	
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.2</version> <!-- Spring Boot 버전을 2.6.2로 변경 -->
+		<version>2.7.18</version> <!-- Spring Boot 버전을 2.6.2로 유지 -->
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ourmarket</groupId>
@@ -54,8 +52,13 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.microsoft.sqlserver</groupId>
-			<artifactId>mssql-jdbc</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<!-- MySQL Connector Java -->
+		<!--~~(No version provided)~~>--><dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId> <!-- 최신 안정화된 MySQL Connector Java 버전 -->
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -74,7 +77,7 @@
 			<version>2.2.0</version> <!-- MyBatis Test 버전도 2.2.0으로 수정 -->
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<dependency> 
 		    <groupId>jstl</groupId>
 		    <artifactId>jstl</artifactId>
 		    <version>1.2</version>
@@ -98,21 +101,11 @@
 		    <artifactId>p6spy</artifactId>
 		    <version>3.9.1</version> <!-- 최신 버전으로 설정 -->
 		</dependency>	
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
-		</dependency>
-		
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
