--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,13 +33,19 @@ logging.level.org.apache.ibatis=DEBUG
 logging.level.org.mybatis=DEBUG
 
 # 데이터베이스 설정 (MSSQL)
-spring.datasource.url=jdbc:p6spy:sqlserver://localhost:1433;databaseName=kb
-spring.datasource.username=sa
+# spring.datasource.url=jdbc:p6spy:sqlserver://localhost:1433;databaseName=kb
+# spring.datasource.username=sa
+# spring.datasource.password=rladuddlr3
+# spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.datasource.url=jdbc:mysql://localhost:3306/springTest
+spring.datasource.username=youngikkim
 spring.datasource.password=rladuddlr3
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 # HikariCP 설정 (커넥션 풀)
-spring.datasource.hikari.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+# spring.datasource.hikari.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
 
 # 실행되는 쿼리 콘솔에 출력
 spring.jpa.properties.hibernate.show_sql=ture
